syntax = "proto3";

package integration_stream;

service TestStream {
  rpc StreamCall(InputStream) returns (stream OutputStream);
}

message InputStream {}
message OutputStream {}
